@@ -679,7 +679,7 @@ Release 0.20.0 - Unreleased
     Total-Output/Total-Input. (Sharad Agarwal via ddas)
 
     HADOOP-5142. Fix MapWritable#putAll to store key/value classes. 
-    (Doğacan Güney via enis)
+    (Do??acan G??ney via enis)
 
     HADOOP-4744. Workaround for jetty6 returning -1 when getLocalPort
     is invoked on the connector. The workaround patch retries a few
@@ -893,6 +893,9 @@ Release 0.19.2 - Unreleased
 
     HADOOP-4780. Cache the size of directories in DistributedCache, avoiding
     long delays in recalculating it. (He Yongqiang via cdouglas)
+
+    HADOOP-5551. Prevent directory destruction on file create.
+    (Brian Bockelman via shv)
 
 Release 0.19.1 - 2009-02-23 
 
